package org.library.borrow;

public enum BorrowStatus {
    BORROWED,
    RETURNED
}
